Adicionada rota para pegar os votos.
